--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -6,38 +6,38 @@ dock_5_selected_tab_idx=0
 dock_floating={}
 dock_bottom=[]
 dock_closed=[]
-dock_split_2=-36
+dock_split_2=-21
 dock_split_3=0
 dock_hsplit_1=0
 dock_hsplit_2=410
-dock_hsplit_3=-573
+dock_hsplit_3=-412
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
 dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Nodes/Cube_Object.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Nodes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Nodes/EnemyBehaviour.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Nodes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Nodes/SpawnTester.tscn", "res://Nodes/Spawn Script.tscn")
-current_scene="res://Nodes/Spawn Script.tscn"
-center_split_offset=-321
-selected_default_debugger_tab_idx=0
+open_scenes=PackedStringArray("res://Nodes/SpawnTester.tscn", "res://Nodes/EnemyBehaviour.tscn", "res://Nodes/3d Enemy Test scene.tscn", "res://Nodes/Spawn Script.tscn")
+current_scene="res://Nodes/3d Enemy Test scene.tscn"
+center_split_offset=-566
+selected_default_debugger_tab_idx=1
 selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://player_ball.gd", "res://README.md"]
-selected_script="res://README.md"
+open_scripts=["res://Scripts/Enemy_Behaviour.gd", "res://README.md"]
+selected_script="res://Scripts/Enemy_Behaviour.gd"
 open_help=[]
-script_split_offset=70
+script_split_offset=237
 list_split_offset=0
 zoom_factor=1.0
 
