Ok 3d Enemy Test Scene has some usable behaviour now, but it isnt quite what we wanted yet

--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Nodes/EnemyBehaviour.tscn")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/", "res://Nodes/")
+dock_filesystem_selected_paths=PackedStringArray("res://Scripts/PlayerBehaviour3D.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Scripts/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -26,16 +26,16 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Nodes/SpawnTester.tscn", "res://Nodes/EnemyBehaviour.tscn", "res://Nodes/3d Enemy Test scene.tscn", "res://Nodes/Spawn Script.tscn")
-current_scene="res://Nodes/3d Enemy Test scene.tscn"
-center_split_offset=-566
-selected_default_debugger_tab_idx=1
+current_scene="res://Nodes/EnemyBehaviour.tscn"
+center_split_offset=-305
+selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
 selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Scripts/Enemy_Behaviour.gd", "res://README.md"]
-selected_script="res://Scripts/Enemy_Behaviour.gd"
+open_scripts=["res://Scripts/PlayerBehaviour3D.gd", "res://README.md"]
+selected_script="res://Scripts/PlayerBehaviour3D.gd"
 open_help=[]
 script_split_offset=237
 list_split_offset=0
