--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,8 +17,8 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://ASSETS/MODELS/Bird_model.glb")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Nodes/", "res://ASSETS/", "res://ASSETS/MODELS/")
+dock_filesystem_selected_paths=PackedStringArray("res://Nodes/bird_animation_player.gd")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://Nodes/", "res://ASSETS/MODELS/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
@@ -26,7 +26,7 @@ dock_5="Inspector,Node,History"
 [EditorNode]
 
 open_scenes=PackedStringArray("res://Nodes/SpawnTester.tscn", "res://Nodes/EnemyBehaviour.tscn", "res://Nodes/3d Enemy Test scene.tscn", "res://Nodes/Spawn Script.tscn", "res://Nodes/WORLD.tscn", "res://Nodes/bird.tscn")
-current_scene="res://Nodes/WORLD.tscn"
+current_scene="res://Nodes/3d Enemy Test scene.tscn"
 center_split_offset=-305
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
@@ -34,8 +34,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://Nodes/bird_animation_player.gd", "res://Nodes/bird_model.gd", "res://Scripts/Enemy_Behaviour.gd", "res://Scripts/PlayerBehaviour3D.gd", "res://README.md"]
-selected_script="res://Nodes/bird_model.gd"
+open_scripts=["res://README.md"]
+selected_script="res://README.md"
 open_help=[]
 script_split_offset=237
 list_split_offset=0
