--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -23,7 +23,7 @@ state={
 "row": 0,
 "scroll_position": 0.0,
 "selection": false,
-"syntax_highlighter": "Plain Text"
+"syntax_highlighter": "Normaler Text"
 }
 
 [res://Scripts/Enemy_Behaviour.gd]
