--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -9,7 +9,7 @@ dock_closed=[]
 dock_split_2=-123
 dock_split_3=0
 dock_hsplit_1=0
-dock_hsplit_2=410
+dock_hsplit_2=437
 dock_hsplit_3=-412
 dock_hsplit_4=0
 dock_filesystem_h_split_offset=240
@@ -17,7 +17,7 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray()
+dock_filesystem_selected_paths=PackedStringArray("res://Nodes/")
 dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
 dock_3="Scene,Import"
 dock_4="FileSystem"
@@ -27,7 +27,7 @@ dock_5="Inspector,Node,History"
 
 open_scenes=PackedStringArray("res://Nodes/SpawnTester.tscn", "res://Nodes/EnemyBehaviour.tscn", "res://Nodes/3d Enemy Test scene.tscn", "res://Nodes/Spawn Script.tscn", "res://Nodes/WORLD.tscn", "res://Nodes/bird.tscn")
 current_scene="res://Nodes/3d Enemy Test scene.tscn"
-center_split_offset=-305
+center_split_offset=-267
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
 selected_bottom_panel_item=0
