Added FPS template with player in WORLD

--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -23,7 +23,7 @@ state={
 "row": 0,
 "scroll_position": 0.0,
 "selection": false,
-"syntax_highlighter": "Normaler Text"
+"syntax_highlighter": "Plain Text"
 }
 
 [res://Scripts/Enemy_Behaviour.gd]
@@ -78,6 +78,38 @@ state={
 "h_scroll_position": 0,
 "row": 0,
 "scroll_position": 0.0,
+"selection": false,
+"syntax_highlighter": "GDScript"
+}
+
+[res://TEMPLATE/scripts/player.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 0,
+"scroll_position": 0.0,
+"selection": true,
+"selection_from_column": 0,
+"selection_from_line": 0,
+"selection_to_column": 0,
+"selection_to_line": 195,
+"syntax_highlighter": "GDScript"
+}
+
+[res://TEMPLATE/scenes/player_control.gd]
+
+state={
+"bookmarks": PackedInt32Array(),
+"breakpoints": PackedInt32Array(),
+"column": 0,
+"folded_lines": Array[int]([]),
+"h_scroll_position": 0,
+"row": 195,
+"scroll_position": 156.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
