--- a/.godot/editor/editor_layout.cfg
+++ b/.godot/editor/editor_layout.cfg
@@ -17,16 +17,16 @@ dock_filesystem_v_split_offset=0
 dock_filesystem_display_mode=0
 dock_filesystem_file_sort=0
 dock_filesystem_file_list_display_mode=1
-dock_filesystem_selected_paths=PackedStringArray("res://Nodes/")
-dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://")
+dock_filesystem_selected_paths=PackedStringArray("res://TEMPLATE/scenes/player.tscn")
+dock_filesystem_uncollapsed_paths=PackedStringArray("Favorites", "res://", "res://TEMPLATE/", "res://TEMPLATE/scenes/", "res://Nodes/")
 dock_3="Scene,Import"
 dock_4="FileSystem"
 dock_5="Inspector,Node,History"
 
 [EditorNode]
 
-open_scenes=PackedStringArray("res://Nodes/SpawnTester.tscn", "res://Nodes/EnemyBehaviour.tscn", "res://Nodes/3d Enemy Test scene.tscn", "res://Nodes/Spawn Script.tscn", "res://Nodes/WORLD.tscn", "res://Nodes/bird.tscn")
-current_scene="res://Nodes/3d Enemy Test scene.tscn"
+open_scenes=PackedStringArray("res://TEMPLATE/scenes/world.tscn", "res://TEMPLATE/scenes/player.tscn", "res://Nodes/WORLD.tscn")
+current_scene="res://Nodes/WORLD.tscn"
 center_split_offset=-267
 selected_default_debugger_tab_idx=0
 selected_main_editor_idx=1
@@ -34,8 +34,8 @@ selected_bottom_panel_item=0
 
 [ScriptEditor]
 
-open_scripts=["res://README.md"]
-selected_script="res://README.md"
+open_scripts=["res://Scripts/Enemy_Behaviour.gd", "res://TEMPLATE/scripts/player.gd", "res://Scripts/PlayerBehaviour3D.gd", "res://TEMPLATE/scenes/player_control.gd", "res://README.md"]
+selected_script="res://TEMPLATE/scenes/player_control.gd"
 open_help=[]
 script_split_offset=237
 list_split_offset=0
