--- a/.godot/editor/script_editor_cache.cfg
+++ b/.godot/editor/script_editor_cache.cfg
@@ -90,13 +90,9 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 0,
+"row": 195,
 "scroll_position": 0.0,
-"selection": true,
-"selection_from_column": 0,
-"selection_from_line": 0,
-"selection_to_column": 0,
-"selection_to_line": 195,
+"selection": false,
 "syntax_highlighter": "GDScript"
 }
 
@@ -108,8 +104,8 @@ state={
 "column": 0,
 "folded_lines": Array[int]([]),
 "h_scroll_position": 0,
-"row": 195,
-"scroll_position": 156.0,
+"row": 104,
+"scroll_position": 65.0,
 "selection": false,
 "syntax_highlighter": "GDScript"
 }
